  13 Jan 2016;  <chymera@gentoo.org> +files/syncthing:
  net-p2p/syncthing: added syncthing launcher file

*syncthing-0.12.12 (13 Jan 2016)

  13 Jan 2016;  <chymera@gentoo.org> +syncthing-0.12.12.ebuild:
  net-p2p/syncthing: added ebuild by mva